- Reviewed old code, changed files to JSON instead of CSV
- Minor updates all around

5/30/2025
~~~~~~~~~~
- made the testing bits more modular and representative of the final app (now spam.py)
- implemented server settings
- implemented the contest alerts bucket as well as the static buckets
- setup the stubs of the observer notifications
- fixed buckets not removing old problems when adding new ones, had duplicates 
- implemented a problem manager, this solved the above problem, also selects problems
- implemented day of week buckets

5/31/2025
~~~~~~~~~~
- added the alert manager to handle the connection to the cogs 
- minor refactoring the base classes
- added a setting to track previously sent problems 
- made a problem helper for minor things related to lc problems

6/4/2025
~~~~~~~~~~
- added a server role setting
- added some helper funcs to query manager
- implemented alert manager functionality for contest time and static alerts

6/5/2025
~~~~~~~~~~
- general restructure and rewrite
- combined dowbuckets and problembuckets
- decoupled some classes
- added the mediator folder
- moved utils into the core
- added an alert class 
- split spam.py up into app, testing/generator, and services/initializer
- implemented some enums to use instead of strings
- tons of other refactoring
- added a small testing framework & tested the services

6/6/2025
~~~~~~~~~~
- refacted the mini test suite
- did testing for all current mediators, buckets, and services
- fixed little bugs as they showed
- make a user model to hold users
- gave the app a user property
- added a activeProblem property to servers 
- the user and active stuff is the base for the submission and point system 

6/7/2025
~~~~~~~~~~
- made the submitter
- minor to make it work and make it flow better

6/19/2025
~~~~~~~~~~
- finished testing the submitter
- finished some other misc testing 
- started on the discord integration