@@ -1,0 +1,82 @@
+import discord
+from discord import app_commands
+from discord.ext import commands
+
+from models.app import App
+from errors.simple_exception import SimpleException
+
+helpDictionary = {
+    "problem" : {
+        "description" : "Gets a LeetCode problem using certain parameters.\n\nThe parameters are difficulty and premium.\nPremium is optional. It is free by default.\n\nDifficulty can be easy, medium, hard, or random.\nPremium can be free, paid, or all.\n",
+        "usage" : "/problem <difficulty> <premium>",
+    },
+    "dailyproblem" : {
+        "description" : "Gets the LeetCode daily problem.",
+        "usage" : "/dailyproblem",
+    },
+    "help" : {
+        "description" : "Displays help information specific commands within the bot.",
+        "usage" : "/help <command>",
+    },
+    "report" : {
+        "description" : "Provides a link which allows users to report an issue to the GitHub.",
+        "usage" : "/report",
+    },
+    "about" : {
+        "description" : "Displays information about the bot.",
+        "usage" : "/about",
+    }
+}
+
+class OtherCog(commands.Cog):
+    def __init__(self, client: commands.Bot):
+        self.client: commands.Bot = client
+        self.app: App = client.app
+    
+    # help command to display help information for the bot
+    # uses a dictionary to store the help information for each command
+    @app_commands.command(name='help', description='Displays help information for the bot.')
+    @app_commands.choices(command = [app_commands.Choice(name=cmd, value=cmd) for cmd in helpDictionary.keys()])
+    async def help(self, interaction: discord.Interaction, command: app_commands.Choice[str]):
+        helpIcon = "https://icons.veryicon.com/png/o/miscellaneous/flat-icon/help-252.png"
+        
+        command = command.value
+        info = helpDictionary.get(command)
+        if info:
+            embed = discord.Embed(title=f"Help for `{command}`", description=info['description'], color=discord.Color.blue())
+            embed.add_field(name="Usage", value=f"`{info['usage']}`", inline=False)
+            embed.set_thumbnail(url=helpIcon)
+            await interaction.response.send_message(embed=embed, ephemeral=True)
+        else:
+            raise SimpleException(f"{command} NOT FOUND")
+
+    # report command to provide a link to report issues
+    # this is a simple command that just sends a message with a link to the GitHub
+    @app_commands.command(name='report', description='Report an issue to the GitHub.')
+    async def report(self, interaction: discord.Interaction):
+        await interaction.response.send_message("Please report issues **[here](https://github.com/hutnerr/leetcode-bot/issues)**.", ephemeral=True)
+
+    # about command to display information about the bot
+    @app_commands.command(name='about', description='Displays information about the bot.')
+    async def about(self, interaction: discord.Interaction):
+        embed = discord.Embed(
+            title="About",
+            description="This bot was created to help facilitate the use of LeetCode on Discord.\n\n"
+            "It provides commands to interact with LeetCode problems and contests easily, however, its main purpose is to provide a system of reoccurring problems to a specific server.\n\n"
+            "The bot is [open source](https://github.com/hutnerr/leetcode-bot) and contributions are welcome.",
+            color=discord.Color.green()
+        )
+        embed.add_field(name="Developer", value="[My GitHub](https://github.com/hutnerr)\n[My Website](https://hunter-baker.com)", inline=False)
+        embed.add_field(name="GitHub", value="[LeetCode Bot](https://github.com/hutnerr/leetcode-bot)", inline=False)
+        await interaction.response.send_message(embed=embed)
+        
+    @help.error
+    @report.error
+    @about.error
+    async def errorHandler(self, interaction: discord.Interaction, error: app_commands.CommandInvokeError):
+        reportMSG = "Try again later. If you believe this is an issue please submit on GitHub using /report."
+        await interaction.response.send_message(f"**{error.original}**: {reportMSG}", ephemeral=True)
+
+
+async def setup(client: commands.Bot) -> None: 
+    await client.add_cog(OtherCog(client))
